--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "fastify-sensible": "^3.0.1",
     "fastify-static": "^3.2.1",
     "http-errors": "^1.8.0",
+    "js-yaml": "^4.0.0",
     "lodash": "^4.17.20",
     "pino": "^6.11.0"
   },
