Updates to allow 'coming soon' and show getting started side panel

--- a/backend/__mocks__/mock-applications/argo.yaml
+++ b/backend/__mocks__/mock-applications/argo.yaml
@@ -13,4 +13,5 @@ spec:
   docsLink: https://argoproj.github.io/
   quickstart: ''
   tutorial: ''
-  getstarted: ''
+  getstartedLink: ''
+  getstartedMarkdown: ''
