--- a/backend/__mocks__/mock-applications/grafana.yaml
+++ b/backend/__mocks__/mock-applications/grafana.yaml
@@ -13,4 +13,5 @@ spec:
   docsLink: https://grafana.com/docs/grafana/latest/
   quickstart: ''
   tutorial: ''
-  getstarted: ''
+  getstartedLink: ''
+  getstartedMarkdown: ''
