--- a/backend/__mocks__/mock-applications/hue.yaml
+++ b/backend/__mocks__/mock-applications/hue.yaml
@@ -13,4 +13,5 @@ spec:
   docsLink: https://docs.gethue.com/
   quickstart: ''
   tutorial: ''
-  getstarted: ''
+  getstartedLink: ''
+  getstartedMarkdown: ''
