--- a/backend/__mocks__/mock-applications/jupyterhub.yaml
+++ b/backend/__mocks__/mock-applications/jupyterhub.yaml
@@ -13,4 +13,5 @@ spec:
   docsLink: https://jupyter.org/hub
   quickstart: create-jupyter-notebook
   tutorial: ''
-  getstarted: ''
+  getstartedLink: ''
+  getstartedMarkdown: ''
