--- a/backend/__mocks__/mock-applications/kafka.yaml
+++ b/backend/__mocks__/mock-applications/kafka.yaml
@@ -13,4 +13,5 @@ spec:
   docsLink: https://kafka.apache.org/documentation/
   quickstart: ''
   tutorial: ''
-  getstarted: ''
+  getstartedLink: ''
+  getstartedMarkdown: ''
