--- a/backend/__mocks__/mock-applications/prometheus.yaml
+++ b/backend/__mocks__/mock-applications/prometheus.yaml
@@ -13,4 +13,5 @@ spec:
   docsLink: https://prometheus.io/docs/
   quickstart: ''
   tutorial: ''
-  getstarted: ''
+  getstartedLink: ''
+  getstartedMarkdown: ''
