--- a/backend/__mocks__/mock-applications/spark.yaml
+++ b/backend/__mocks__/mock-applications/spark.yaml
@@ -13,4 +13,5 @@ spec:
   docsLink: https://spark.apache.org/docs/latest/
   quickstart: ''
   tutorial: ''
-  getstarted: ''
+  getstartedLink: ''
+  getstartedMarkdown: ''
