--- a/backend/__mocks__/mock-applications/superset.yaml
+++ b/backend/__mocks__/mock-applications/superset.yaml
@@ -13,4 +13,5 @@ spec:
   docsLink: https://superset.incubator.apache.org/
   quickstart: ''
   tutorial: ''
-  getstarted: ''
+  getstartedLink: ''
+  getstartedMarkdown: ''
