--- a/backend/applications/percepti-labs.yaml
+++ b/backend/applications/percepti-labs.yaml
@@ -14,5 +14,6 @@ spec:
   offering: Software
   quickstart: ''
   tutorial: ''
-  getstarted: ''
+  getstartedLink: ''
+  getstartedMarkdown: ''
   comingSoon: true
