--- a/backend/applications/anaconda-ce.yaml
+++ b/backend/applications/anaconda-ce.yaml
@@ -14,4 +14,5 @@ spec:
   docsLink: https://docs.anaconda.com/
   quickstart: ''
   tutorial: ''
-  getstarted: ''
+  getstartedLink: ''
+  getstartedMarkdown: ''
