--- a/backend/__mocks__/mock-applications/prometheus.yaml
+++ b/backend/__mocks__/mock-applications/prometheus.yaml
@@ -8,10 +8,12 @@ spec:
   kfdefApplications: ['prometheus-cluster', 'prometheus-operator']
   route: prometheus-portal
   img: images/prometheus.svg
-  support: third party
-  offering: SaaS
+  category: Managed service
   docsLink: https://prometheus.io/docs/
-  quickstart: ''
-  tutorial: ''
-  getstartedLink: ''
-  getstartedMarkdown: ''
+  quickStart: ''
+  tutorial: https://airflow.apache.org/
+  tutorialLength: 15
+  howDoI: https://airflow.apache.org/
+  howDoILength: 15
+  getStartedLink: https://airflow.apache.org/
+  getStartedMarkdown: "# Getting started"
