--- a/backend/__mocks__/mock-applications/grafana.yaml
+++ b/backend/__mocks__/mock-applications/grafana.yaml
@@ -8,10 +8,12 @@ spec:
   kfdefApplications: ['grafana-cluster', 'grafana-instance']
   route: grafana-route
   img: images/grafana.svg
-  support: red hat
-  offering: SaaS
+  category: Red Hat
   docsLink: https://grafana.com/docs/grafana/latest/
-  quickstart: ''
-  tutorial: ''
-  getstartedLink: ''
-  getstartedMarkdown: ''
+  quickStart: ''
+  tutorial: https://airflow.apache.org/
+  tutorialLength: 15
+  howDoI: https://airflow.apache.org/
+  howDoILength: 15
+  getStartedLink: https://airflow.apache.org/
+  getStartedMarkdown: "# Getting started"
