--- a/backend/__mocks__/mock-applications/superset.yaml
+++ b/backend/__mocks__/mock-applications/superset.yaml
@@ -8,10 +8,12 @@ spec:
   kfdefApplications: ['superset']
   route: superset
   img: images/superset.svg
-  support: third party
-  offering: SaaS
+  category: Managed service
   docsLink: https://superset.incubator.apache.org/
-  quickstart: ''
-  tutorial: ''
-  getstartedLink: ''
-  getstartedMarkdown: ''
+  quickStart: ''
+  tutorial: https://airflow.apache.org/
+  tutorialLength: 15
+  howDoI: https://airflow.apache.org/
+  howDoILength: 15
+  getStartedLink: https://airflow.apache.org/
+  getStartedMarkdown: "# Getting started"
