--- a/backend/__mocks__/mock-applications/thriftserver.yaml
+++ b/backend/__mocks__/mock-applications/thriftserver.yaml
@@ -8,10 +8,12 @@ spec:
   kfdefApplications: ['thriftserver']
   route: thriftserver
   img: images/spark.svg
-  support: third party
-  offering: SaaS
+  category: SaaS
   docsLink: https://spark.apache.org/docs/latest/sql-distributed-sql-engine.html
-  quickstart: ''
-  tutorial: ''
-  getstartedLink: ''
-  getstartedMarkdown: ''
+  quickStart: ''
+  tutorial: https://airflow.apache.org/
+  tutorialLength: 15
+  howDoI: https://airflow.apache.org/
+  howDoILength: 15
+  getStartedLink: https://airflow.apache.org/
+  getStartedMarkdown: "# Getting started"
