Add Getting Started doc retrieval, move docs data up to top level
Add some UI fixes for loading, nav bar collapse, quick start launch buttons

--- a/data/applications/anaconda-ce.yaml
+++ b/data/applications/anaconda-ce.yaml
@@ -10,11 +10,6 @@ spec:
   route: ''
   img: images/anaconda-ce.svg
   category: SaaS
+  support: third party support
   docsLink: https://docs.anaconda.com/
   quickStart: ''
-  tutorial: ''
-  tutorialLength: 0
-  howDoI: ''
-  howDoILength: 0
-  getStartedLink: ''
-  getStartedMarkdown: ''
