--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
   "main": "server.js",
   "scripts": {
     "start": "export NODE_ENV=production; node ./server.js",
-    "start:dev": "export NODE_ENV=development; node ./server.js",
+    "start:dev": "export NODE_ENV=development; nodemon ./server.js",
     "test": "export NODE_ENV=test; eslint --ext .json,.js ./plugins ./routes ./utils",
     "test:fix": "eslint --ext .json,.js ./plugins ./routes ./utils --fix"
   },
@@ -48,6 +48,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "fastify-cli": "^2.3.0",
+    "nodemon": "^2.0.7",
     "pino-pretty": "^4.3.0",
     "prettier": "^2.2.1",
     "tap": "^14.10.8"
