--- a/data/applications/jupyterhub.yaml
+++ b/data/applications/jupyterhub.yaml
@@ -9,7 +9,7 @@ spec:
   route: jupyterhub
   img: images/jupyterhub.svg
   category: Managed service
+  support: red hat
   docsLink: https://jupyter.org/hub
   quickStart: create-jupyter-notebook
-  getStartedLink: https://jupyterhub.readthedocs.io/en/stable/getting-started
-  getStartedMarkdown: "# Getting started"
+  getStartedLink: https://jupyterhub.readthedocs.io/en/stable/getting-started/index.html
