Update text for learning center to resources, doc updates

--- a/data/applications/anaconda-ce.yaml
+++ b/data/applications/anaconda-ce.yaml
@@ -13,3 +13,5 @@ spec:
   support: third party support
   docsLink: https://docs.anaconda.com/
   quickStart: ''
+  getStartedLink: https://docs.anaconda.com/anaconda-commercial/quickstart/
+
