Update copy text
Renamed 'how do i' to 'how to'
Updated category types
Removed mock apps (out of date)
Updated mast head logo
styling fixes for getting started markdown

--- a/data/applications/anaconda-ce.yaml
+++ b/data/applications/anaconda-ce.yaml
@@ -9,7 +9,7 @@ spec:
   kfdefApplications: []
   route: ''
   img: images/anaconda-ce.svg
-  category: SaaS
+  category: Partner managed
   support: third party support
   docsLink: https://docs.anaconda.com/
   quickStart: ''
