--- a/data/applications/percepti-labs.yaml
+++ b/data/applications/percepti-labs.yaml
@@ -10,7 +10,7 @@ spec:
   route: ''
   img: images/percepti-labs.svg
   docsLink: https://www.perceptilabs.com/docs/
-  category: Managed service
+  category: Red Hat managed
   support: third party support
   quickStart: ''
   comingSoon: true
