--- a/data/docs/jupyterhub-connect-data-s3-bucket-how-to.yaml
+++ b/data/docs/jupyterhub-connect-data-s3-bucket-how-to.yaml
@@ -1,6 +1,6 @@
 metadata:
   name: jupyter-connect-data-s3-bucket
-  type: how-do-i
+  type: how-to
 spec:
   displayName: How do I connect to data in a S3 Bucket?
   appName: jupyterhub
