--- a/data/docs/seldon-operational-tasks-how-to.yaml
+++ b/data/docs/seldon-operational-tasks-how-to.yaml
@@ -1,6 +1,6 @@
 metadata:
-  name: seldon-operation-tasks-hdi
-  type: how-do-i
+  name: seldon-operation-tasks-how-to
+  type: how-to
 spec:
   displayName: Operational Tasks
   appName: seldon-deploy
